--- a/windows/Gosu.vcxproj.filters
+++ b/windows/Gosu.vcxproj.filters
@@ -246,4 +246,7 @@
       <Filter>Implementation</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
